# community

./: .gitignore  .gitmodules  CLAUDE.md  README.md  integrations.json  kimi.plugin.json  mcp.json
.ccb/: .claude-session
.claude-plugin/: marketplace.json
.codebuddy-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.factory-plugin/: marketplace.json
apt/: README.md  install.sh  nowledge-mem-archive-keyring.asc  nowledge-mem-archive-keyring.gpg
docker/: .gitignore  Caddyfile  README.md  bootstrap.sh  compose.tls.yaml  compose.updater.yaml  compose.yaml  nmemctl
docs/: PLUGIN_DEVELOPMENT_GUIDE.md  USER_OVERRIDE_GUIDE.md
examples/: AGENTS.md  conversation-markdown.md
nowledge-mem-alma-plugin/: CHANGELOG.md  CLAUDE.md  README.md  alma-skill-nowledge-mem.md  main.js  manifest.json  package.json
nowledge-mem-bench/: .gitignore  README.md  pyproject.toml
nowledge-mem-bench/src/nmem_bench/: __init__.py  __main__.py  cli.py  llm.py
nowledge-mem-bench/src/nmem_bench/benchmarks/: locomo.py  longmemeval.py  types.py
nowledge-mem-bench/src/nmem_bench/evaluation/: f1.py  llm_judge.py  retrieval.py
nowledge-mem-bench/src/nmem_bench/nmem/: client.py
nowledge-mem-bench/src/nmem_bench/pipeline/: answer.py  checkpoint.py  evaluate.py  ingest.py  orchestrator.py  process.py  search.py
nowledge-mem-bench/src/nmem_bench/utils/: config.py
nowledge-mem-bench/tests/: test_llm.py
nowledge-mem-browse-now-npx-skills/: CHANGELOG.md  README.md
nowledge-mem-bub-plugin/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
nowledge-mem-bub-plugin/src/bub_skills/: __init__.py
nowledge-mem-bub-plugin/src/nowledge_mem_bub/: __init__.py  client.py  plugin.py  tools.py
nowledge-mem-bub-plugin/src/skills/nowledge-mem/: SKILL.md
nowledge-mem-claude-code-plugin/: CHANGELOG.md  README.md  plugin.json
nowledge-mem-codebuddy-plugin/: .mcp.json  README.md
nowledge-mem-codex-plugin/: .mcp.json  AGENTS.md  CHANGELOG.md  README.md  RELEASING.md  codex.config.example.toml
nowledge-mem-codex-prompts/: AGENTS.md  README.md  distill.md  install.sh  read_working_memory.md  save_session.md  search_memory.md
nowledge-mem-copilot-cli-plugin/: AGENTS.md  CHANGELOG.md  README.md  RELEASING.md
nowledge-mem-craft-agent-connector/: README.md  guide.md  source-config.example.json
nowledge-mem-cursor-plugin/: .mcp.json  CHANGELOG.md  README.md  RELEASING.md
nowledge-mem-droid-plugin/: CHANGELOG.md  README.md  RELEASING.md
windsurf-trajectory-extractor/: .gitignore  README.md  pyproject.toml
windsurf-trajectory-extractor/examples/: sample_output.jsonl
windsurf-trajectory-extractor/src/windsurf_trajectory/: __init__.py  cli.py  extractor.py
(+250 files in other folders)
