[project]
name = "nmem-bench"
version = "0.1.0"
description = "Open-source benchmark for personal memory systems — evaluates via nmem CLI against LoCoMo and LongMemEval datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "litellm>=1.40",
    "nltk>=3.8",
    "regex>=2024.0",
]

[project.scripts]
nmem-bench = "nmem_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nmem_bench"]
