[project]
name = "nowledge-mem-bub"
version = "0.7.0"
description = "Nowledge Mem plugin for Bub — cross-ai context for your agent."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Nowledge Labs", email = "hello@nowledge-labs.ai" }]
keywords = ["bub", "nowledge-mem", "memory", "agent", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["bub>=0.3.0a1"]

[project.entry-points."bub"]
nowledge_mem = "nowledge_mem_bub:plugin"

[project.urls]
Homepage = "https://mem.nowledge.co"
Documentation = "https://mem.nowledge.co/docs/integrations/bub"
Repository = "https://github.com/nowledge-co/community/tree/main/nowledge-mem-bub-plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nowledge_mem_bub", "src/skills"]
