[project]
name = "windsurf-trajectory-extractor"
version = "0.1.0"
description = "Deep extraction of Windsurf Cascade conversation history via protobuf decoding"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []  # Pure standard library

[project.scripts]
windsurf-trajectory = "windsurf_trajectory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/windsurf_trajectory"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["windsurf_trajectory"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
